# Tabu

./: README.md  client.cpp  serwer.cpp  srv_3.cpp  srv_updated.cpp
Tabu/: CMakeLists.txt  dane.txt  klient.cpp  serwer.cpp
ui_v.0.1/Tabu/: CMakeLists.txt  GameScreen.cpp  GameScreen.h  GameScreen.ui  LobbyScreen.cpp  LobbyScreen.h  LobbyScreen.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerNameScreen.cpp  PlayerNameScreen.h  PlayerNameScreen.ui  ResultsScreen.cpp  ResultsScreen.h  ResultsScreen.ui  ResultsScreen.ui.autosave  main.cpp
